# reed_solomon_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitmap.h  common.c  common.h  galois.c  galois.h  galoisconstants.h  main.cpp  matrixoperations.c  matrixoperations.h  matrixtree.c  matrixtree.h  mem.c  mem.h  radix-tree.c  radix-tree.h  reedsolomon.c  reedsolomon.h
